adjust slideFrame style from display:grid to display:flex. seeing if this fixes issue with arrows being out of place on iphone.

--- a/src/style.css
+++ b/src/style.css
@@ -22,9 +22,10 @@
 }
 
 #slide-frame {
-    display: grid;
-    /* justify-content: space-around; */
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
     /* max-width: 75%; */
     height: 550px;
     max-height: 550px;
@@ -57,7 +58,7 @@
     font-size: 35px;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.322);
-    justify-self: right;
+    align-self: flex-end;
     padding: 0 8px 0 8px;
 }
 
